# mailmachine-hs

./: README.md  mailmachine-hs.cabal
src/: MailMachine.hs
src/MailMachine/: Types.hs
src/System/Log/Handler/: MailMachine.hs
