name:                mailmachine-hs
version:             0.1.0.0
synopsis:            Simple haskell client for my simple mailing daemon (mailmachine)
-- description:
homepage:            http://github.com/paluh/mailmachine-hs
license:             BSD3
license-file:        LICENSE
author:              Tomasz Rybarczyk
maintainer:          paluho@gmail.com
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     MailMachine,
                       System.Log.Handler.MailMachine
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson,
                       base,
                       bytestring,
                       hslogger,
                       mime-mail,
                       hedis,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010
